Fully rewrote CodecAPI, old structures must be migrated, OR the entities field removed (extract, remove, and load and re-save as struct), made Reflection API MUCH safer and covered missing points